# SFE

./: .cursorrules  .gitignore  01_SFE_개요와_기본개념.md  02_SFE_수학적_기초.md  03_SFE_핵심_방정식과_유도.md  04_SFE_실험적_검증.md  05_SFE_우주론적_응용.md  06_SFE_천체물리_검증.md  07_SFE_추가_난제_검증.md  CHANGELOG_2024_10.md  README.md  SFE_NIF_validation.py  SFE_fusion_calc.py  calculate_error_reduction.py  error_reduction_final.py  new.md  pyproject.toml  sweep_results.csv  sweep_results_new.csv  temp.md  끈_SFE_통일_수치검증.py  끈이론_SFE_통일_직접검증.md
Part1_이론기초/: 01_SFE_개요와_기본개념.md  02_SFE_수학적_기초.md  03_SFE_핵심_방정식과_유도.md  1.1_SFE_개요와_기본개념.md  1.2_SFE_수학적_기초.md  1.3_SFE_핵심_방정식과_유도.md
Part2_핵심검증/: 04_SFE_실험적_검증.md  05_SFE_우주론적_응용.md  06_SFE_이론_총괄_및_핵심_결과.md  07_SFE_추가_난제_검증.md  08_SFE_종합_검증_및_결론.md  09B_SFE_다중모드_억압_보손.md  10_SFE_NIF_점화_재해석.md  2.1_SFE_실험적_검증.md  2.2_SFE_우주론적_응용.md  2.3_SFE_이론_총괄_및_핵심_결과.md  2.4_SFE_종합_검증_및_결론.md
Part3_확장이론/: 09_SFE_암흑물질_확장_및_검증.md  10_SFE_다중상수_정식화_및_검증.md  11_SFE_다중상수_수학적_세부_유도.md  12_SFE_양자_난제_적용_및_예측.md  3.1_SFE_억압보손_유도_및_정합성_증명.md  3.4_SFE_뮤온_g-2_해결.md  3.5_SFE_양성자_반경_퍼즐_해결.md  3.6_SFE_초기은하_형성_해결.md  3.7_SFE_양자_난제_적용_및_예측.md  3.8_SFE_Flavor_확장_수학적_정식화.md  SFE_muon_g2_deductive.py
Part4_방법론/: 13_SFE_통계추론_및_모델비교.md  14_SFE_실험설계_및_검증프로토콜.md  15_SFE_진공보호_및_epsilon_유도_시도.md  16_SFE_RG_고정점_수치_프로토타입.md  17_SFE_트래커_포텐셜_수치_프로토타입.md  (+4 more)
sfe_core/: Cargo.toml  suppresson_scan_results.csv
sfe_core/src/: lib.rs  main.rs
sfe_core/src/controller/: mod.rs
sfe_core/src/engine/: benchmark.rs  core.rs  ibm_api.rs  noise.rs  optimizer.rs  qec.rs  suppresson.rs  suppresson_physics.rs
(+108 files in other folders)
